    * 3973 FIX: Backup: Fixed displaying wrong finish time after backup completion
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3901 Logfile pattern analyser: pattern lists can now be searched
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...
    * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...
    * 3975 FIX: Improved error handling when trying to edit not existing global setting
    * 3976 FIX: Fixed broken link in LDAP automatic sync help text
    * 3977 FIX: Fixed poping up changes button in sidebar snapin after a change

    Notifications:
    * 3957 mail: now allows extra HTML section between body and table
    * 3972 It's now possible to bulk notifications based on Event console contacts
    * 3900 FIX: Notification analysis: Fixed wrong color for host notification states
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory: