@@ -1,0 +1,9 @@
+Title: Fixed possible flickering GUI when using Chrome and zooming the page
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i2
+Date: 1478686590
+Class: fix
+
+
