@@ -68,6 +68,7 @@
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
     * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
+    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
 
     WATO:
     * 3915 User access times: New icon when never logged in; New column "last seen"
